--- a/style.css
+++ b/style.css
@@ -224,7 +224,7 @@ p{
 
 /*hero section*/
 #hero {
-	background-image: url("C:\Users\Dell\Desktop\Portfolio\12.jpg");
+	background-image: url("12.jpg");
 	background-size: cover;
 	background-position: top center;
 	position: relative;
